fix overflow and faq

--- a/css/faq.css
+++ b/css/faq.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -11,21 +11,18 @@
 .heading-faq{
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 .heading-faq h3{
-    font-family:  'Montserret', serif;
     margin-top: 5%;
     font-size: 55px;
     color: #0C155E;
     font-weight: lighter;
     letter-spacing: 12px;
+   
 }
 .container-faq{
     display: flex;
     justify-content:center;
-    align-items: center;
-    
 }
 
 .list-item{
@@ -101,8 +98,6 @@ div.panel.show {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        
     }
     
 .list-item{
