--- a/css/sponsers.css
+++ b/css/sponsers.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserret', serif;
 }
 
 .sponsers-section{
@@ -17,8 +18,7 @@
     color: #0C155E;
     font-weight: lighter;
     letter-spacing: 12px;
-    font-size: 55px;
-    font-family: 'Montserrat', sans-serif;  
+    font-size: 55px; 
 }
 
 
@@ -28,7 +28,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-    width: 100vw;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(330px,330px));
     column-gap: 5px;
